# meshmanager

./: .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  TODOS.md  docker-compose.dev.yml  docker-compose.prebuilt.yml
backend/: Dockerfile  entrypoint.sh  pyproject.toml
backend/app/: __init__.py  config.py  database.py  main.py  telemetry_registry.py
backend/app/auth/: middleware.py  oidc.py  totp.py
backend/app/collectors/: meshmonitor.py  mqtt.py
backend/app/models/: __init__.py  channel.py  coverage.py  message.py  node.py  packet_record.py  settings.py  solar_production.py  source.py  telemetry.py  traceroute.py  user.py  utilization.py
backend/app/routers/: __init__.py  auth.py  config.py  coverage.py  messages.py  metrics.py  sources.py  ui.py  users.py  utilization.py
backend/app/schemas/: auth.py  (+3 more)
backend/migrations/: env.py
backend/scripts/: fix_mqtt_timestamps.py  validate_server_defaults.py
backend/tests/: test_anonymous_user.py  test_auth.py  test_config.py  test_emoji.py  test_init_db.py  test_meshmonitor_position_history.py  test_meshmonitor_ratelimit.py  test_meshmonitor_telemetry.py  test_meshmonitor_upsert.py  test_messages.py  test_migration_integration.py  test_migrations.py  test_mqtt_nodeinfo.py  test_mqtt_paxcounter.py  test_mqtt_position.py  test_mqtt_telemetry.py  test_mqtt_topic_parsing.py  test_mqtt_traceroute.py  test_oidc.py  test_protobuf_decode_inner.py  test_protobuf_decrypt.py  test_schemas.py  test_settings.py  test_solar_analysis.py  test_telemetry_api.py  test_telemetry_registry.py  test_totp.py  test_users.py
(+128 files in other folders)
