[project]
name = "meshmanager"
version = "0.6.2"
description = "Management and oversight application for MeshMonitor and Meshtastic MQTT"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "httpx>=0.28",
    "aiomqtt>=2.3",
    "protobuf>=5.29",
    "meshtastic>=2.5",
    "authlib>=1.3",
    "itsdangerous>=2.2",
    "python-multipart>=0.0.17",
    "prometheus-client>=0.21",
    "bcrypt>=4.2",
    "numpy>=1.26",
    "rasterio>=1.3",
    "fiona>=1.9",
    "apprise>=1.9",
    "matplotlib>=3.8",
    "pyotp>=2.9",
    "qrcode>=7.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "httpx>=0.28",
    "ruff>=0.8",
    "aiosqlite>=0.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # Line too long - handled by formatter

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
